<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.a1264d.a1264scout.BaseRankings">
    <item
        android:id="@+id/TeamName"
        android:orderInCategory="1"
        android:title="@string/inputTeamName"
        app:showAsAction="never" />

    <item
        android:id="@+id/OverallRating"
        android:orderInCategory="2"
        android:title="@string/OverallRating"
        app:showAsAction="never" />

    <item
        android:id="@+id/OffensivePowerRating"
        android:orderInCategory="3"
        android:title="@string/OffensivePowerRating"
        app:showAsAction="never" />

    <item
        android:id="@+id/AutonomousPowerRating"
        android:orderInCategory="5"
        android:title="@string/AutonomousPowerRating"
        app:showAsAction="never" />

    <item
        android:id="@+id/AuxiliaryPowerRating"
        android:orderInCategory="4"
        android:title="@string/AuxiliaryPowerRating"
        app:showAsAction="never" />

    <item
        android:id="@+id/Refresh"
        android:icon="@drawable/ic_cached_white_24dp"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
</menu>
